Fixed newsDashboard alignment

--- a/PlanIT-Front-End-React/src/components/News/NewsDashboardStyle.css
+++ b/PlanIT-Front-End-React/src/components/News/NewsDashboardStyle.css
@@ -10,6 +10,10 @@
     padding-right: 1.5rem;
     padding-left: 1.5rem;
     overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 
 }
 
@@ -20,6 +24,7 @@
     padding: 10px;
     box-sizing: border-box;
     margin-bottom: 1.5rem;
+    max-width: 500px;
 }
 
 .newsDashboardBlocks * {
@@ -37,4 +42,5 @@
 
 .newsTitle {
     cursor: pointer;
+    font-size: large;
 }
